--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -9,11 +9,6 @@ body {
   overflow-x: hidden;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
 
 a {
   color: inherit;
@@ -36,6 +31,7 @@ a {
     display: unset;
   }
 }
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -150,5 +146,20 @@ a {
   }
   body {
     @apply bg-background text-foreground;
+  }
+  :root {
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
